# spacenet

./: .gitignore  README.md  evaluate_ood.py  pretrain_simclr.py  pyproject.toml  report_visuals.py  requirements.txt  train.py
reports/: active_labeler.html  class_metrics.csv  fits_ood_examples_id.html  ood_examples_ood.html  ood_gallery.html
scripts/: active_learning_labeler.py  active_learning_merge.py  active_learning_rank.py  active_learning_train.sh  build_rgb_triples.py  check_jwst_progress.sh  convert_fits_to_png.py  convert_paths_to_urls.py  download_jwst_fits.py  download_jwst_previews.py  install_jwst_cron.sh  make_ood_examples.py  make_ood_gallery.py  make_rgb_composite.py  plot_ood_hist.py  postprocess_fits_ood.sh  rotate_jwst_logs.sh  run_ablation.sh  run_ood_ddp.sh  run_ood_ddp_fits.sh  run_ood_eval.sh  send_jwst_summary.py
