[project]
name = "spacenet"
version = "0.1.0"
description = "SpaceNet training scaffold for astronomical image classification."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "torchvision",
  "tensorboard",
  "matplotlib",
  "astroquery",
  "astropy",
]

[tool.ruff]
line-length = 100
